fix: adjust markup

--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
       <li>Git</li>
     </ul>
     <h2 id="code-examples">Code examples</h2>
-    <code><p>function multiply(a, b){</p>
-      <p>return a * b;</p>
-    }</code>
+    <code>function multiply(a, b) {<br>return a * b;<br>}</code>
     <h2 id="work-experience">Work experience</h2>
     <p>EPAM Systems 2017 - Present</p>
     <h2 id="my-projects">My projects</h2>
